    - Blocked creating towns named 'spawn' and renaming towns to 'spawn'. Breaks many other functions if towns are named 'spawn'.
    - Added '/townyadmin nation add [nation] [town]' so admins can force add towns to nations.
    - Fixed '/townyadmin unclaim'.
    - Setup name prefix/suffix at login so names display correctly in other list plugins.
    - Added separate charges for own town spawn travel and public spawn travel (set in config.yml).
    - Players in Enemy nations can no longer use spawn travel to opposing public towns.
    - town claim now tells you if the area is already claimed instead of just the cryptic 'not attached to edge' message.
    - Enabled '/townyadmin backup' use from the console.
    - Added two new config entries for King and Mayor chat colours (colour_king & colour_mayor).
    - Added a max_distance_between_homeblocks setting allowing server operators to control how spaced out towns are created.
    - Added the ability to disable player and creature trampling of crops (per world).
    - Towns now remember their respective states for fire, explosions, mob spawns and PVP when the World flags are toggled.
    - Towny will now attempt to repair corrupted world files.
    - Nations who change to a neutral state during a war are now correctly removed from the war.
    - Towny now logs all player issued commands to the server.log
    - Added better control over name/chat modifying - modify_chat: '{permprefix}{townynameprefix}{playername}{townynamepostfix}{permsuffix}'
    - Added custom titles. Kings can assign titles to their vassals with '/nation set title [resident] title'. The title will be used in place of the townynameprefix.
    - Added custom surnames. Kings can assign surnames to their vassals with '/nation set surname [resident] text'. The title will be used in place of the townynamepostfix.